--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,4 @@
+/*eslint linebreak-style: ["error", "windows"]*/
 {
   "env": {
     "browser": true,
@@ -19,6 +20,6 @@
     "indent": ["off", 2],
     "linebreak-style": ["off", "windows"],
     "quotes": ["error", "double"],
-    "semi": ["error", "always"]    
+    "semi": ["error", "always"]
   }
 }
