--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
