--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@prisma/client": "^5.8.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
