--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.6",
     "@types/react": "^18.2.43",
