--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "dev": "vite",
     "dev-node": "tsx watch src/server",
+    "postinstall": "patch-package",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+    
+
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
