--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-    
-
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3"
