--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "patch-package": "^8.0.0",
     "react": "^18.2.0",
