--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev-node": "tsx watch src/server",
+    "vercel-build ": "npx prisma migrate deploy",
     "postinstall": "patch-package",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
