--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "chart.js": "^4.4.1",
     "cors": "^2.8.5",
     "date-fns": "^3.3.1",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "patch-package": "^8.0.0",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-chartjs-2": "^5.2.0",
