--- a/src/vercel.json
+++ b/src/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/server.ts",
+      "src": "src/server/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "src/server.ts"      
+      "src": "(.*)",
+      "dest": "src/server/index.ts"      
     }
   ]
 }
