--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.3.1",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "money-manager": "file:",
     "patch-package": "^8.0.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
