--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.23.0",
     "@prisma/client": "^5.8.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
